New files added - [] Files modified - [VendorApplication.html,VendorApplication.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/VendorApplication/VendorApplication.html
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.html
@@ -5,20 +5,22 @@
         <wm-left-panel columnwidth="2" content="leftnav" name="left_panel1"></wm-left-panel>
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid1">
-                <wm-gridrow name="gridrow1" padding="5em unset unset unset">
+                <wm-gridrow name="gridrow9" padding="2em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn23">
+                        <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" name="breadcrumb1" itemlabel="label" itemicon="icon" itemlink="link"></wm-breadcrumb>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow1" padding="2em unset unset unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn1">
-                        <wm-liveform novalidate="false" errormessage="" title="CivicXpress Vendor Application" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.VendorData.dataSet" captionalign="left" captionposition="top" name="liveformVendorApplication"
-                        class="panel-primary">
+                        <wm-liveform novalidate="false" errormessage="" title="CivicXpress Vendor Application" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.VendorData.dataSet" captionalign="left" captionposition="top" name="liveformVendorApplication" class="panel-primary">
                             <wm-label padding="unset 0.5em" name="lblInstructions" caption="If you would like your company made available to be selected on new forms please complete the following application.  You may then submit this application to multiple municipalities to be included in their &quot;Approved Vendors&quot; lists."></wm-label>
                             <wm-layoutgrid columns="3" name="layoutgrid3">
                                 <wm-gridrow name="gridrow24">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn24">
-                                        <wm-form-field name="companyName" displayname="Company Name" show="true" primary-key="false" generator="assigned" key="companyName" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                        validationmessage="Company Name is required"></wm-form-field>
+                                        <wm-form-field name="companyName" displayname="Company Name" show="true" primary-key="false" generator="assigned" key="companyName" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" validationmessage="Company Name is required"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn25">
-                                        <wm-form-field name="address1" displayname="Address1" show="true" primary-key="false" generator="assigned" key="address1" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                        validationmessage="Address1 is required"></wm-form-field>
+                                        <wm-form-field name="address1" displayname="Address1" show="true" primary-key="false" generator="assigned" key="address1" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" validationmessage="Address1 is required"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn26">
                                         <wm-form-field name="address2" displayname="Address2" show="true" primary-key="false" generator="assigned" key="address2" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -26,12 +28,11 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow25">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn27">
-                                        <wm-form-field name="city" displayname="City" show="true" primary-key="false" generator="assigned" key="city" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                        validationmessage="City is required"></wm-form-field>
+                                        <wm-form-field name="city" displayname="City" show="true" primary-key="false" generator="assigned" key="city" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" validationmessage="City is required"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn28">
-                                        <wm-form-field name="states" displayname="State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" required="required" widget="select" placeholder="Select value" displayexpression="stateName"
-                                        orderby="stateName:asc" validationmessage="State is required"></wm-form-field>
+                                        <wm-form-field name="states" displayname="State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" required="required" widget="select" placeholder="Select value" displayexpression="stateName" orderby="stateName:asc"
+                                        validationmessage="State is required"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn29">
                                         <wm-form-field name="postalCode" displayname="Postal Code" show="true" primary-key="false" generator="assigned" key="postalCode" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -42,8 +43,7 @@
                                         <wm-form-field name="country" displayname="Country" show="true" primary-key="false" generator="assigned" key="country" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn31">
-                                        <wm-form-field name="companyPhone" displayname="Company Phone" show="true" primary-key="false" generator="assigned" key="companyPhone" type="string" required="required" widget="text" maxchars="255" inputtype="text"
-                                        placeholder="Enter value" validationmessage="Company phone is required"></wm-form-field>
+                                        <wm-form-field name="companyPhone" displayname="Company Phone" show="true" primary-key="false" generator="assigned" key="companyPhone" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" validationmessage="Company phone is required"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn32">
                                         <wm-form-field name="altPhone" displayname="Alt Phone" show="true" primary-key="false" generator="assigned" key="altPhone" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -51,8 +51,7 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow27">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn33">
-                                        <wm-form-field name="companyEmail" displayname="Company Email" show="true" primary-key="false" generator="assigned" key="companyEmail" type="string" required="required" widget="text" maxchars="255" inputtype="text"
-                                        placeholder="Enter value" validationmessage="Company Email is required"></wm-form-field>
+                                        <wm-form-field name="companyEmail" displayname="Company Email" show="true" primary-key="false" generator="assigned" key="companyEmail" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" validationmessage="Company Email is required"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn34">
                                         <wm-form-field name="companyWebsite" displayname="Company Website" show="true" primary-key="false" generator="assigned" key="companyWebsite" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -63,38 +62,34 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow28">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn36">
-                                        <wm-form-field name="businessClassification" displayname="Business Classification" show="true" primary-key="false" generator="assigned" key="businessClassification" type="string" widget="text" maxchars="255" inputtype="text"
-                                        placeholder="Enter value"></wm-form-field>
+                                        <wm-form-field name="businessClassification" displayname="Business Classification" show="true" primary-key="false" generator="assigned" key="businessClassification" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn37">
                                         <wm-form-field name="stateRegNumber" displayname="State Registration Number" show="true" primary-key="false" generator="assigned" key="stateRegNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn38">
-                                        <wm-form-field name="numberOfEmployees" displayname="Number Of Employees" show="true" primary-key="false" generator="assigned" key="numberOfEmployees" type="integer" step="0" widget="number" inputtype="number" placeholder="Enter value"
-                                        required="true" validationmessage="Number of employees required" minvalue="1"></wm-form-field>
+                                        <wm-form-field name="numberOfEmployees" displayname="Number Of Employees" show="true" primary-key="false" generator="assigned" key="numberOfEmployees" type="integer" step="0" widget="number" inputtype="number" placeholder="Enter value" required="true"
+                                        validationmessage="Number of employees required" minvalue="1"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow29">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn39">
-                                        <wm-form-field name="feinNumber" displayname="FEIN Number" show="true" primary-key="false" generator="assigned" key="feinNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                        required="true" validationmessage="FEIN or SSN Required"></wm-form-field>
+                                        <wm-form-field name="feinNumber" displayname="FEIN Number" show="true" primary-key="false" generator="assigned" key="feinNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" required="true" validationmessage="FEIN or SSN Required"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn40">
                                         <wm-form-field name="coi" displayname="Certificate of Insurance" show="true" primary-key="false" generator="assigned" key="coi" type="blob" required="required" widget="upload" maxchars="255"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn41">
-                                        <wm-form-field name="insuranceCompany" displayname="Insurance Company" show="true" primary-key="false" generator="assigned" key="insuranceCompany" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                        required="true" validationmessage="Insurance Company Is Required"></wm-form-field>
+                                        <wm-form-field name="insuranceCompany" displayname="Insurance Company" show="true" primary-key="false" generator="assigned" key="insuranceCompany" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" required="true" validationmessage="Insurance Company Is Required"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow30">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn42">
-                                        <wm-form-field name="insuranceExpires" displayname="Insurance Expires Date" show="true" primary-key="false" generator="assigned" key="insuranceExpires" type="date" widget="date" placeholder="Select date" outputformat="MM-dd-yyyy"
-                                        required="true" validationmessage="Insurance expiration date required" datepattern="MM-dd-yyyy" defaultvalue="CURRENT_DATE" mindate="bind:Variables.Today.dataSet.dataValue | toDate: 'yyyy-MM-dd'"></wm-form-field>
+                                        <wm-form-field name="insuranceExpires" displayname="Insurance Expires Date" show="true" primary-key="false" generator="assigned" key="insuranceExpires" type="date" widget="date" placeholder="Select date" outputformat="MM-dd-yyyy" required="true" validationmessage="Insurance expiration date required"
+                                        datepattern="MM-dd-yyyy" defaultvalue="CURRENT_DATE" mindate="bind:Variables.Today.dataSet.dataValue | toDate: 'yyyy-MM-dd'"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn44">
-                                        <wm-form-field name="contractorTypes" displayname="Contractor Types" show="true" primary-key="false" generator="assigned" key="contractorTypes" type="list" is-related="true" widget="select" placeholder="Select value"
-                                        displayexpression="contractorType"></wm-form-field>
+                                        <wm-form-field name="contractorTypes" displayname="Contractor Types" show="true" primary-key="false" generator="assigned" key="contractorTypes" type="list" is-related="true" widget="select" placeholder="Select value" displayexpression="contractorType"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn30">
                                         <wm-form-field name="faxNumber" displayname="Fax Number" show="true" primary-key="false" generator="assigned" key="faxNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
