New files added - [] Files modified - [UserCreation.html,UserCreation.js] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -131,6 +131,9 @@
                 </wm-wizardstep>
                 <wm-wizardstep name="wizardstep4" title="Finish">
                     <wm-layoutgrid name="layoutgrid3" columns="1">
+                        <wm-gridrow name="gridrow20">
+                            <wm-gridcolumn columnwidth="12" name="gridcolumn30_1"></wm-gridcolumn>
+                        </wm-gridrow>
                         <wm-gridrow name="gridrow15">
                             <wm-gridcolumn columnwidth="12" name="gridcolumn25">
                                 <wm-label padding="unset 0.5em" name="label4" caption="Please Set Password" fontweight="bold" fontsize="15"></wm-label>
@@ -169,7 +172,6 @@
                     </wm-layoutgrid>
                 </wm-wizardstep>
             </wm-wizard>
-            <wm-form-field displayname="Custom field" widget="text" show="true" type="custom" name="form_field23"></wm-form-field>
         </wm-page-content>
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
