New files added - [] Files modified - [ManageMunicipalities.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
+++ b/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
@@ -52,8 +52,8 @@
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow3">
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn5">
-                                            <wm-form-field name="states" displayname="States" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" widget="autocomplete" displayexpression="stateName" searchkey="stateName"
-                                            displaylabel="stateName" placeholder="Search"></wm-form-field>
+                                            <wm-form-field name="states" displayname="States" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" widget="select" displayexpression="stateName" placeholder="Search"
+                                            orderby="stateName:asc"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn6">
                                             <wm-form-field name="postalCode" displayname="Postal Code" show="true" primary-key="false" generator="assigned" key="postalCode" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -86,7 +86,7 @@
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow7">
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn13">
-                                            <wm-form-field name="logo" displayname="Logo" show="true" primary-key="false" generator="assigned" key="logo" type="blob" widget="upload" maxchars="255" permitted="undefined"></wm-form-field>
+                                            <wm-form-field name="logo" displayname="Logo" show="true" primary-key="false" generator="assigned" key="logo" type="blob" widget="upload" maxchars="255" permitted="undefined" href="services/cx2/Municipalities/1/content/logo?0.16853062382606043"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn14">
                                             <wm-form-field name="mondayYn" displayname="Monday Yn" show="true" primary-key="false" generator="assigned" key="mondayYn" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
