--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
@@ -25,7 +25,7 @@
                             <wm-layoutgrid name="layoutgrid8">
                                 <wm-gridrow name="gridrow12" padding="2em">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn28">
-                                        <wm-panel iconclass="wi wi-info-outline" name="panel2" title="Municipality Feilds">
+                                        <wm-panel iconclass="wi wi-info-outline" name="panel2" title="Municipality Info">
                                             <wm-layoutgrid name="layoutgrid3">
                                                 <wm-gridrow name="gridrow6_1">
                                                     <wm-gridcolumn columnwidth="6" name="gridcolumn8" padding="1em unset">
@@ -77,7 +77,7 @@
                                                             <wm-label class="col-md-3 control-label" name="label7" caption="State"></wm-label>
                                                             <wm-container class="col-md-9" name="container6">
                                                                 <wm-select name="textState" datavalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].stateId" dataset="bind:Variables.AllSates.dataSet" searchkey="stateName" displaylabel="stateName"
-                                                                datafield="id" orderby="stateName:desc" displayfield="stateName"></wm-select>
+                                                                datafield="id" orderby="stateName:asc" displayfield="stateName"></wm-select>
                                                             </wm-container>
                                                         </wm-composite>
                                                     </wm-gridcolumn>
@@ -85,7 +85,7 @@
                                                 <wm-gridrow name="gridrow10">
                                                     <wm-gridcolumn columnwidth="6" name="gridcolumn19" padding="1em unset">
                                                         <wm-composite name="composite7">
-                                                            <wm-label class="col-md-4 control-label" name="label8" caption="PostalCode"></wm-label>
+                                                            <wm-label class="col-md-4 control-label" name="label8" caption="Postal Code"></wm-label>
                                                             <wm-container class="col-md-8" name="container7">
                                                                 <wm-text name="textPostalCode" datavalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].postalCode"></wm-text>
                                                             </wm-container>
