--- a/src/main/webapp/pages/PUDApplication/PUDApplication.html
+++ b/src/main/webapp/pages/PUDApplication/PUDApplication.html
@@ -16,12 +16,10 @@
                             <wm-panel iconclass="wi wi-account-circle" name="panel1" title="Property Owner Details" badgetype="default" class="panel-info">
                                 <wm-gridrow name="gridrow1">
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn1">
-                                        <wm-form-field name="propertyOwnerName" displayname="Property Owner Name" required="false" show="true" generator="assigned" primary-key="false" key="propertyOwnerName" type="string" is-related="false" maxchars="255"
-                                        pc-display="true" mobile-display="true" widget="text"></wm-form-field>
+                                        <wm-form-field name="propertyOwnerName" displayname="Property Owner Name" show="true" primary-key="false" generator="assigned" key="propertyOwnerName" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn12">
-                                        <wm-form-field name="propertyOwnerPhNo" displayname="Property Owner Ph No" required="false" show="true" generator="assigned" primary-key="false" key="propertyOwnerPhNo" type="string" is-related="false" maxchars="255"
-                                        pc-display="true" mobile-display="true" widget="text"></wm-form-field>
+                                        <wm-form-field name="propertyOwnerPhNo" displayname="Property Owner Ph No" show="true" primary-key="false" generator="assigned" key="propertyOwnerPhNo" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-panel>
@@ -32,21 +30,16 @@
                             <wm-panel iconclass="wi wi-building" name="panel2" title="Building Dimensions" class="panel-info">
                                 <wm-gridrow name="gridrow4">
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn4">
-                                        <wm-form-field name="basementSft" displayname="Basement Sft" required="false" show="true" generator="assigned" primary-key="false" key="basementSft" type="string" is-related="false" maxchars="255" pc-display="true"
-                                        mobile-display="true" widget="text"></wm-form-field>
+                                        <wm-form-field name="basementSft" displayname="Basement Sft" show="true" primary-key="false" generator="assigned" key="basementSft" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn13_1">
-                                        <wm-form-field name="garageSft" displayname="Garage Sft" required="false" show="true" generator="assigned" primary-key="false" key="garageSft" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                                        widget="text"></wm-form-field>
+                                        <wm-form-field name="garageSft" displayname="Garage Sft" show="true" primary-key="false" generator="assigned" key="garageSft" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow7">
-                                    <wm-gridcolumn columnwidth="3" name="gridcolumn13_2"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn7">
-                                        <wm-form-field name="totalSft" displayname="Total Sft" required="false" show="true" generator="assigned" primary-key="false" key="totalSft" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                                        widget="text"></wm-form-field>
+                                        <wm-form-field name="totalSft" displayname="Total Sft" show="true" primary-key="false" generator="assigned" key="totalSft" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="3" name="gridcolumn14"></wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-panel>
                         </wm-gridcolumn>
@@ -56,38 +49,30 @@
                             <wm-panel iconclass="wi wi-account-circle" title="Property Details" badgetype="default" class="panel-info" name="panel3">
                                 <wm-gridrow name="gridrow12_1">
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn16">
-                                        <wm-form-field name="sidingMaterial" displayname="Siding Material" required="false" show="true" generator="assigned" primary-key="false" key="sidingMaterial" type="string" is-related="false" maxchars="255" pc-display="true"
-                                        mobile-display="true" widget="text"></wm-form-field>
+                                        <wm-form-field name="sidingMaterial" displayname="Siding Material" show="true" primary-key="false" generator="assigned" key="sidingMaterial" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn17">
-                                        <wm-form-field name="electricLinesCount" displayname="Electric Lines Count" required="false" show="true" generator="assigned" primary-key="false" key="electricLinesCount" type="string" is-related="false" maxchars="255"
-                                        pc-display="true" mobile-display="true" widget="text"></wm-form-field>
+                                        <wm-form-field name="electricLinesCount" displayname="Electric Lines Count" show="true" primary-key="false" generator="assigned" key="electricLinesCount" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow4">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn8">
-                                        <wm-form-field name="connectionType" displayname="Connection Type" required="false" show="true" generator="assigned" primary-key="false" key="connectionType" type="string" is-related="false" maxchars="255" pc-display="true"
-                                        mobile-display="true" widget="text"></wm-form-field>
+                                        <wm-form-field name="connectionType" displayname="Connection Type" show="true" primary-key="false" generator="assigned" key="connectionType" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-panel>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow9DontDelete">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn9">
-                            <wm-form-field name="formTypes" displayname="Form Types" required="false" show="false" generator="assigned" primary-key="false" key="formTypes" type="list" is-related="true" pc-display="true" mobile-display="true" widget="select"
-                            dataset="bind:Variables.FormObj.dataSet" datafield="All Fields" displayfield="formType" defaultvalue="bind:Variables.FormObj.firstRecord"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow10DontDelete">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn10">
-                            <wm-form-field name="users" displayname="Users" required="false" show="false" generator="assigned" primary-key="false" key="users" type="list" is-related="true" pc-display="true" mobile-display="true" widget="select" dataset="bind:Variables.UserObj.dataSet"
-                            datafield="All Fields" displayfield="email" defaultvalue="bind:Variables.UserObj.firstRecord"></wm-form-field>
-                        </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="12" name="gridcolumn9"></wm-gridcolumn>
                     </wm-gridrow>
                 </wm-layoutgrid>
-                <wm-form-action key="reset" class="form-reset btn-secondary" iconclass="wi wi-refresh" action="reset()" display-name="Reset" show="true" type="button" update-mode="true"></wm-form-action>
-                <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
+                <wm-form-field name="users" displayname="Users" show="false" primary-key="false" generator="assigned" key="users" type="list" is-related="true" widget="select" dataset="bind:Variables.UserObj.dataSet" datafield="All Fields" displayfield="email"
+                defaultvalue="bind:Variables.UserObj.firstRecord" placeholder="Select value"></wm-form-field>
+                <wm-form-field name="formTypes" displayname="Form Types" show="false" primary-key="false" generator="assigned" key="formTypes" type="list" is-related="true" widget="select" dataset="bind:Variables.FormObj.dataSet" datafield="All Fields"
+                displayfield="formType" defaultvalue="bind:Variables.FormObj.firstRecord" placeholder="Select value"></wm-form-field>
+                <wm-form-action key="reset" display-name="Reset" show="true" class="form-reset btn-secondary" iconclass="wi wi-refresh" title="Reset" action="reset()" disabled="false" type="button" update-mode="true"></wm-form-action>
+                <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
             </wm-liveform>
             <!--  __________________Main______________________________ -->
         </wm-page-content>
