New files added - [DevFormDataEntry.js,DevFormDataEntry.css,DevFormDataEntry.variables.json,DevFormDataEntry.html,DevFormDataEntry] Files modified - [leftnav.html,pages-config.json,DataEntry.html,DataEntry.variables.json,app.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -24,5 +24,8 @@
         <wm-nav-item name="nav_item7">
             <wm-anchor name="anchor7" iconclass="wi wi-file" caption="DevDataEntry" on-click="Variables.goToPage_DataEntry.invoke()"></wm-anchor>
         </wm-nav-item>
+        <wm-nav-item name="nav_item9">
+            <wm-anchor name="anchor9" iconclass="wi wi-file" caption="Forms DevDataEntry" on-click="Variables.goToPage_DevFormDataEntry.invoke()"></wm-anchor>
+        </wm-nav-item>
     </wm-nav>
 </wm-partial>
