--- a/src/main/webapp/pages/DataEntry/DataEntry.html
+++ b/src/main/webapp/pages/DataEntry/DataEntry.html
@@ -866,9 +866,7 @@
             </wm-tabs>
             <wm-layoutgrid name="layoutgrid15_1">
                 <wm-gridrow name="gridrow59_1">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn116_1">
-                        <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" name="breadcrumb1" itemlabel="label" itemicon="icon" itemlink="link"></wm-breadcrumb>
-                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn116_1"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn117_1"></wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow60_1">
